# tg-bot

./: .gitignore  pyproject.toml  requirements.txt  setup.py
src/telegramBot/: __init__.py
src/telegramBot.egg-info/: PKG-INFO  SOURCES.txt
